# crabnum

./: CMakeLists.txt  README.md  TODO.md  flake.nix  readme.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_bitwise.cpp  bench_checked.cpp  bench_saturating.cpp  bench_wrapping.cpp  bench_zerocost.cpp  main.cpp
include/: crabnum.h
test/: CMakeLists.txt  main.cpp  test_arith.cpp  test_bitwise.cpp  test_bytes.cpp  test_cast.cpp  test_checked.cpp  test_compat.cpp  test_constexpr.cpp  test_literals.cpp  test_math.cpp  test_overflowing.cpp  test_parse.cpp  test_saturating.cpp  test_stream.cpp  test_wrapping.cpp
