function(crabnum_add_bench NAME)
    add_executable(${NAME} ${NAME}.cpp)
    target_link_libraries(${NAME} crabnum::crabnum benchmark::benchmark_main)
    target_compile_options(${NAME} PRIVATE -Wall -Wextra -pedantic)
endfunction()

crabnum_add_bench(bench_zerocost)
crabnum_add_bench(bench_checked)
crabnum_add_bench(bench_saturating)
crabnum_add_bench(bench_wrapping)
crabnum_add_bench(bench_bitwise)
