function(crabnum_add_test NAME)
    add_executable(${NAME} ${NAME}.cpp)
    target_link_libraries(${NAME} crabnum::crabnum GTest::gtest_main)
    target_compile_options(${NAME} PRIVATE -Wall -Wextra -pedantic)
    add_test(NAME ${NAME} COMMAND ${NAME})
endfunction()

crabnum_add_test(test_arith)
crabnum_add_test(test_bitwise)
crabnum_add_test(test_bytes)
crabnum_add_test(test_cast)
crabnum_add_test(test_checked)
crabnum_add_test(test_compat)
crabnum_add_test(test_overflowing)
crabnum_add_test(test_literals)
crabnum_add_test(test_math)
crabnum_add_test(test_parse)
crabnum_add_test(test_saturating)
crabnum_add_test(test_stream)
crabnum_add_test(test_wrapping)
crabnum_add_test(test_constexpr)

